2008-09-25   D. V. Wiebe <getdata@ketiltrout.net>  svn:103
	* src/open.c (_GD_ParseRaw _GD_ParseLincom _GD_ParseLinterp
	_GD_ParseMultiply _GD_ParseBit _GD_ParsePhase): Fixed memory leaks

	* src/errors.c (_GD_ClearError): Replaced with a macro of the same name
	defined in internal.h.

	* src/add.c: First part of dirfile_add(): input validation and add to
	DIRFILE list.

2008-09-22   D. V. Wiebe <getdata@ketiltrout.net>  svn:97
	* configure.ac bindings/cxx/Makefile.am bindings/cxx/test/Makefile.am: Call
	the C++ bindings libgetdata++ instead of libdirfile to be a little more
	explicit about what it is.  This also allows installation alongside TK's
	libdrifile.

2008-09-22   D. V. Wiebe <getdata@ketiltrout.net>  svn:94
	* bindings/cxx/entry.cpp: Use <cstring> instead of <string>.  Patch from
	Matt.

2008-09-18   D. V. Wiebe <getdata@ketiltrout.net>  svn:90
	* src/legacy.c (_GD_GetDirfile) test/legacy_get_rofs.c test/legacy_get_put.c:
	Open dirfiles read-only unless called via PutData().  Re-open read-only
	dirfile read-write when necessary.  Added two test-cases for same.

	* test/Makefile.am: Conditionally compile legacy tests.

2008-09-15   D. V. Wiebe <getdata@ketiltrout.net>  svn:86
	* src/errors.c: Fix GD_E_RAW_IO error string.

2008-09-15   D. V. Wiebe <getdata@ketiltrout.net>
	Getdata-0.3.0 released.

2008-09-05   D. V. Wiebe <getdata@ketiltrout.net>  svn:77
	* m4/c99.m4 configure.ac Makefile.am: Re-implement AC_PROG_CC_C99 as
	GD_PROG_CC_C99 to fix `deprecated -c99' warning with icc.

	* bindings/cxx/dirfile.h bindings/cxx/entry.h bindings/cxx/test/getdata.cpp
	bindings/cxx/test/putdata.cpp bindings/f77/fgetdata.h
	test/convert_float32_float64.c test/convert_float32_int16.c
	test/convert_float32_int32.c test/convert_float32_int64.c
	test/convert_float32_int8.c test/convert_float32_uint16.c
	test/convert_float32_uint32.c test/convert_float32_uint64.c
	test/convert_float32_uint8.c test/convert_float64_float32.c