@@ -42,9 +42,9 @@ endif
 
 lib_LTLIBRARIES = libgetdata.la
 libgetdata_la_SOURCES = add.c close.c common.c ${DEBUG_C} entry.c errors.c \
-												field_list.c flush.c getdata.c ${LEGACY_C} nfields.c \
-												nframes.c open.c putdata.c spf.c types.c \
-												${GETDATA_LEGACY_H} internal.h
+												field_list.c flush.c format_list.c getdata.c \
+												${LEGACY_C} nfields.c nframes.c open.c putdata.c spf.c \
+												types.c ${GETDATA_LEGACY_H} internal.h
 libgetdata_la_LDFLAGS = -export-symbols-regex '^[^_]' \
 												-version-info @GETDATA_IFACE_VERSION@:@GETDATA_IMPL_REVISION@:@GETDATA_IFACE_AGE@
 
