@@ -1,3 +1,11 @@
+2008-09-26   D. V. Wiebe <getdata@ketiltrout.net>  svn:105
+	* man/get_entry.3 src/add.c src/getdata.h.in src/open.c: Expose include_list
+	to the public.  Add include index to each entry.
+
+	* man/get_format_filename.3 man/get_nformats.3 src/format_list.c
+	src/getdata.h.in: Add public functions get_nformats() and
+	get_format_filename().
+
 2008-09-25   D. V. Wiebe <getdata@ketiltrout.net>  svn:103
 	* src/open.c (_GD_ParseRaw _GD_ParseLincom _GD_ParseLinterp
 	_GD_ParseMultiply _GD_ParseBit _GD_ParsePhase): Fixed memory leaks
@@ -5,8 +13,8 @@
 	* src/errors.c (_GD_ClearError): Replaced with a macro of the same name
 	defined in internal.h.
 
-	* src/add.c: First part of dirfile_add(): input validation and add to
-	DIRFILE list.
+	* src/add.c src/getdata.h.in: First part of dirfile_add(): input validation
+	and add to DIRFILE list.
 
 2008-09-22   D. V. Wiebe <getdata@ketiltrout.net>  svn:97
 	* configure.ac bindings/cxx/Makefile.am bindings/cxx/test/Makefile.am: Call
